# JMComic-Crawler-Python-Lite

./: README.md  pyproject.toml  requirements-dev.txt  setup.py
assets/docs/: mkdocs.yml
assets/docs/sources/: index.md  option_file_syntax.md
assets/docs/sources/api/: plugin.md
assets/docs/sources/tutorial/: 5_filter.md  8_pick_domain.md  9_custom_download_dir_name.md
assets/option/: option_test_api.yml
src/jmcomic/: jm_config.py  jm_option.py  jm_postman.py
