[build-system]
requires = ["setuptools"]

[project]
name = "jmcomic"
authors = [{name = "zakozakozakozakozako", email = "00000000@users.noreply.github.com"}]
description = "Python API For JMComic (禁漫天堂)"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords=['python', 'jmcomic', '18comic', '禁漫天堂', 'NSFW']
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "commonx>=0.6.38",
    "pillow",
    "pycryptodome",
    "pyyaml",
    "requests",
]
dynamic = ["version"]

[project.optional-dependencies]
curl = ["curl-cffi"]

[project.urls]
Homepage = "https://github.com/zakozakozakozakozako/JMComic-Crawler-Python-Lite"
Documentation = "https://jmcomic.readthedocs.io"

[project.scripts]
jmcomic = "jmcomic.cl:main"

[tool.setuptools.dynamic]
version = {attr = "jmcomic.__version__"}